--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -1,8 +1,7 @@
 .projects {
-    border: 1px solid red;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center; */
 }
 
 .projectsList {
