--- a/styles/globals.css
+++ b/styles/globals.css
@@ -202,6 +202,9 @@ nav .logo {
 
 .container {
     position: relative;
+    display: grid;
+    row-gap: 2em;
+    /* border: 1px solid black; */
 }
 
 .container::before,
@@ -209,10 +212,6 @@ nav .logo {
     content: '';
     display: block;
     width: 100%;
-}
-
-.container::before {
-    height: 60px;
 }
 
 .container::after {
@@ -291,11 +290,18 @@ nav .logo {
         font-size: 1.1rem;
         line-height: 1.3;
     }
+
+    .container {
+        row-gap: 3.5em;
+    }
 }
 
 @media screen and (min-width: 1024px) {
     body {
         padding: 0 8%;
+    }
+    .container {
+        row-gap: 5em;
     }
 }
 
